source/stylesheets/app.css.scss
:root {
  --base-color: #39f;
  --link-hover-color: #0055b3;
  --paragraph-mb: 1.5rem;
  --text-color: #333;
  --background-color: #fff;
  color-scheme: light dark;
}

@media (prefers-color-scheme: dark) {
  :root {
      --background-color: #222;
      --text-color: #eee;
  }
}

@import 'post';

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  position: relative;
}

a {
  color: var(--base-color);
  text-decoration: none;
  &:hover, &:focus {
    color: var(--link-hover-color);
  }
}

img { max-width: 100%; }

body {
  font-family: -apple-system, 'Helvetica Neue', Helvetica, Arial, sans-serif;
  color: var(--text-color);
  background-color: var(--background-color);
  main {
    min-height: 100%;
    margin: 0 auto;
    #content {
      flex: 1;
      width: 100%;
    }
  }
}

body main #content {
  p { margin-bottom: var(--paragraph-mb); }

  nav {
    margin-left: 0
  }

  ol, ul {
    margin-left: 3rem;
    li {
      margin-bottom: 1rem;
    }
  }

  p, li {
    font-family: "Libre Baskerville", serif;
    line-height: 1.65rem;
  }
}

header {
  padding: 1em;
  padding-bottom: 0.3em;
  width: 100%;
  background-color: var(--base-color);
  text-align: center;

  li {
    list-style-type: none;
  }

  .header-content {
    img {
      border-radius: 50%;
    }
  }
}

.wave-container wave {
  @keyframes wave {
    0%, 100% { height: 0px; }
    50% { height: 15px; }
  }
  display: flex;
  width: 35px;
  justify-content: space-between;
  align-items: flex-end;
  padding: 3px 3px 0 3px;
  height: 20px;
}

.wave-container wave bar {
  width: 5px;
  background: #fff;
  animation: wave 1s infinite;
  &.bar1 { animation-delay: 0.1s; animation-duration: 1.3s; }
  &.bar2 { animation-delay: 0.2s; animation-duration: 0.8s; }
  &.bar3 { animation-delay: 0.3s; animation-duration: 1.0s; }
  &.bar4 { animation-delay: 1.0s; animation-duration: 0.5s; }
}

a.pill {
  background-color: #818181;
  color: white;
  &:hover {
    background-color: #858585;
    color: white;
  }
}

.pill {
  background-color: #eee;
  color: #999;
  border-radius: 5px;
  margin-right: 5px;
  font-size: 1rem;
  &:hover {
    color: #999;
  }
}

.post-group {
  .post-list {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    .post-link {
      width: calc(50% - 20px);
    }
  }
}

.date {
  min-width: 45px;
}

@media only screen and (max-width: 600px) {
  .post-group .post-list {
    display: block;
    .post-link { width: 100%; }
  }
}

